tests/fixtures/invalid/bytes_bitand_set.py
# Cannot bitwise AND Bytes and Set[int]
x: bytes = b"hello" & {1, 2, 3}
